# Sloth-source

./: .gitignore  CMakeLists.txt  README.md  a.out  lexer  lexer.cpp  lexer.hpp  main.cpp  out.s  out_exec  test_run  unbit
include/ast/: ast.hpp
include/compiler/: CodeGenerator.cpp  CodeGenerator.hpp
include/lexer/: lexer.cpp  lexer.hpp
include/otimizer/: AssemblyOptimizer.cpp  AssemblyOptimizer.hpp  Target.hpp
include/parser/: parser.cpp  parser.hpp
include/semantica/: seman.hpp
test/: index.sth
